<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="user"
            type="com.smart.agriculture.industrial.solutions.packages.models.User" />
    </data>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="330dp"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:padding="15dp">

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_large" />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:src="@mipmap/ic_launcher_package"
                tools:ignore="ContentDescription" />

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_large" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/spacing_medium"
                android:text="@string/smart_tubewell"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textColor="@color/grey_1000"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/spacing_medium"
                android:text="@string/sign_in_to_continue"
                android:textColor="@color/grey_1000" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textAlignment="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                android:textColor="@color/grey_1000" />

            <EditText
                android:id="@+id/login_email_edit_text"
                style="@style/AppTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-4dp"
                android:layout_marginRight="-4dp"
                android:importantForAutofill="no"
                android:inputType="text"
                android:maxLength="50"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@={user.email}"
                android:textColor="@color/grey_1000"
                tools:ignore="LabelFor,TextFields" />

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_mlarge" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textAlignment="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                android:textColor="@color/grey_1000" />

            <EditText
                android:id="@+id/login_password_edit_type"
                style="@style/AppTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-4dp"
                android:layout_marginRight="-4dp"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:maxLength="50"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@={user.password}"
                android:textColor="@color/grey_1000"
                tools:ignore="LabelFor" />


            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_mxlarge" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">


                    <com.wang.avi.AVLoadingIndicatorView
                        android:id="@+id/login_progress_bar_avi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:foregroundGravity="center"
                        android:visibility="visible"
                        app:indicatorColor="@color/blue_700"

                        />
                </RelativeLayout>

                <Button
                    android:id="@+id/login_done_btn"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginLeft="-4dp"
                    android:layout_marginRight="-4dp"
                    android:background="@drawable/btn_rounded_green_300"
                    android:backgroundTint="@color/blue_700"
                    android:drawableTint="@color/blue_700"
                    android:text="@string/signin"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    tools:ignore="UnusedAttribute"
                    tools:targetApi="lollipop" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    tools:ignore="UselessLeaf">

                </RelativeLayout>

            </RelativeLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_medium" />

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_xlarge" />

        </LinearLayout>

    </RelativeLayout>
</layout>